fix: make jail guard Folia-safe